Uploaded v2.0 of User Manager